--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/LabInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/LabInfoStepUserControl.xaml
@@ -8,7 +8,7 @@
              xmlns:viewmodels="clr-namespace:Germadent.Rma.App.ViewModels"
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=designMock:DesignMockLaboratoryInfoWizardStepViewModel, IsDesignTimeCreatable=True}">
     <Grid>
         <Grid.Resources>
