--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/WizardWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/WizardWindow.xaml
@@ -12,7 +12,6 @@
         mc:Ignorable="d"
         Title="{Binding Title}"
         ShowInTaskbar="False"
-        
         MinHeight="800"
         Height="800"
         MinWidth="800"
@@ -61,8 +60,9 @@
                     Command="{Binding BackCommand}"/>
             <Button Width="100" Content="Далее" Margin="6,0,0,0"
                     Command="{Binding NextCommand}"/>
-            <Button Width="100" Content="В работу" Margin="32,0,0,0" helpers:WindowCloseHelper.DialogResult="True"
+            <Button Width="100" Content="OK" Margin="32,0,0,0" helpers:WindowCloseHelper.DialogResult="True"
                     Command="{Binding OKCommand}"/>
+            <Button Width="100" Content="Отмена" Margin="6,0,0,0" helpers:WindowCloseHelper.DialogResult="False"/>
         </StackPanel>
     </Grid>
 </Window>
