--- a/src/Germadent.UI/Theme/TextBoxDictionary.xaml
+++ b/src/Germadent.UI/Theme/TextBoxDictionary.xaml
@@ -1,12 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="ScrollBarDictionary.xaml"/>
 	</ResourceDictionary.MergedDictionaries>
 
-	<Style x:Key="StlnTextBoxStyle"  TargetType="{x:Type TextBox}">
-		<Setter Property="Foreground" Value="#333333"/>
+    <ControlTemplate x:Key="validationFailed">
+        <StackPanel Orientation="Horizontal">
+            <Border BorderBrush="Red" BorderThickness="1" CornerRadius="4" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                <AdornedElementPlaceholder />
+            </Border>
+        </StackPanel>
+    </ControlTemplate>
+
+    <Style x:Key="StlnTextBoxStyle"  TargetType="{x:Type TextBox}">
+		<Setter Property="Validation.ErrorTemplate" Value="{StaticResource validationFailed}"/>
+        <Setter Property="Foreground" Value="#333333"/>
 		<Setter Property="Background" Value="#fafafa"/>
 		<Setter Property="BorderBrush" Value="#66000000"/>
 		<Setter Property="BorderThickness" Value="1"/>
@@ -59,6 +67,11 @@
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
+		<Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
+            </Trigger>
+        </Style.Triggers>
 	</Style>
 
 </ResourceDictionary>
