--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Germadent.Rma.App"
         xmlns:properties="clr-namespace:Germadent.Rma.App.Properties"
         xmlns:designmock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
+        xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
         mc:Ignorable="d"
         Title="{x:Static properties:Resources.AppTitle}" 
         MinWidth="1024"
@@ -14,7 +15,8 @@
         Height="600"
         WindowStartupLocation="CenterScreen"
         Background="{x:Static SystemColors.ControlBrush}"
-        d:DataContext="{d:DesignInstance Type=designmock:DesignMockMainViewModel, IsDesignTimeCreatable=True}">
+        d:DataContext="{d:DesignInstance Type=designmock:DesignMockMainViewModel, IsDesignTimeCreatable=True}"
+        DataContextChanged="MainWindow_OnDataContextChanged">
     <Window.Resources>
         <ResourceDictionary>
             <Style x:Key="DataGridTextStyle" TargetType="{x:Type TextBlock}">
@@ -85,6 +87,9 @@
                                     Binding="{Binding Model.Closed, StringFormat='dd.MM.yyyy HH:mm'}"/>
             </DataGrid.Columns>
         </DataGrid>
+
+        <controls:BusyIndicator Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center"
+                                Width="50" Height="50" Fill="#2D2D2D" IsBusy="{Binding IsBusy, UpdateSourceTrigger=PropertyChanged}"/>
 
         <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Margin="0,3,0,0">
             <TextBlock Text="Записей:"/>
