--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MouthUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MouthUserControl.xaml
@@ -10,7 +10,7 @@
              xmlns:toothCard="clr-namespace:Germadent.Rma.App.ViewModels.ToothCard"
              d:DataContext="{d:DesignInstance Type=designMock:DesignMockLaboratoryProjectWizardStepViewModel, IsDesignTimeCreatable=True}">
     <UserControl.Resources>
-        <DataTemplate DataType="{x:Type viewmodels:MaterialViewModel}">
+        <DataTemplate DataType="{x:Type toothCard:MaterialViewModel}">
             <TextBlock Text="{Binding Item.Name}"/>
         </DataTemplate>
 
@@ -172,9 +172,9 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Text="Описание работ" VerticalAlignment="Center" Margin="0,5,0,0"/>
-            <TextBox Grid.Column="1" Margin="6,6,0,0" Text="{Binding Description, Mode=OneWay}" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
-            <Button Grid.Column="2" Content="Копировать" Margin="6,6,0,0"
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Описание работ" VerticalAlignment="Center" Margin="0,5,0,0"/>
+            <TextBox Grid.Row="0" Grid.Column="1" Margin="6,6,0,0" Text="{Binding Description, Mode=OneWay}" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
+            <Button Grid.Row="0" Grid.Column="2" Content="Копировать" Margin="6,6,0,0"
                     Command="{Binding CopyDescriptionCommand}"/>
         </Grid>
     </Grid>
