Валидация + мелкие правки

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/OrdersFilterWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/OrdersFilterWindow.xaml
@@ -84,7 +84,7 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type toothCard:MaterialViewModel}">
                         <Grid>
-                            <CheckBox Grid.Column="0" IsChecked="{Binding IsChecked}" Content="{Binding Item.Name}" />
+                            <CheckBox Grid.Column="0" IsChecked="{Binding IsChecked}" Content="{Binding Item.MaterialName}" />
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
