--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/UserControls/MillingCenterInfoStepUserControl.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Germadent.Rma.App.Views.UserControls"
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
+             xmlns:properties="clr-namespace:Germadent.Rma.App.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=designMock:DesignMockMillingCenterInfoWizardStepViewModel, IsDesignTimeCreatable=True}">
@@ -29,23 +30,27 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Заказчик" Margin="0,0,0,3"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Заказчик *" Margin="0,0,0,3"
+                   ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"/>
         <TextBox Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
                  Text="{Binding Customer, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="ФИО пациента"  />
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="ФИО пациента *" 
+                   ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"/>
         <TextBox Grid.Row="1" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding Patient, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="ФИО техника" VerticalAlignment="Center"
-                   HorizontalAlignment="Right" Margin="0,6,6,0" />
+        <TextBlock Grid.Row="2" Grid.Column="0" Text="ФИО техника *" VerticalAlignment="Center"
+                   ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
+                   HorizontalAlignment="Right" Margin="0,6,0,0" />
         <TextBox Grid.Row="2" Grid.Column="1" Margin="6,6,0,0"
-                 Text="{Binding ResponsiblePerson, UpdateSourceTrigger=PropertyChanged}" />
+                 Text="{Binding TechnicFullName, UpdateSourceTrigger=PropertyChanged}" />
 
-        <TextBlock Grid.Row="3" Grid.Column="0" Text="Номер тел. техника" VerticalAlignment="Center"
-                   HorizontalAlignment="Right" Margin="0,6,6,0" />
+        <TextBlock Grid.Row="3" Grid.Column="0" Text="Номер тел. техника *" VerticalAlignment="Center"
+                   ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
+                   HorizontalAlignment="Right" Margin="0,6,0,0" />
         <TextBox Grid.Row="3" Grid.Column="1" Margin="6,6,0,0"
-                 Text="{Binding ResponsiblePersonPhone, UpdateSourceTrigger=PropertyChanged}" />
+                 Text="{Binding TechnicPhone, UpdateSourceTrigger=PropertyChanged}" />
 
         <TextBlock Grid.Row="4" Text="Дата и время получения работы"/>
         <DatePicker Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Margin="6,6,0,0" Width="150"
